tests/ui/feature-gates/feature-gate-cfg_target_object_format.stderr
error[E0658]: `cfg(target_object_format)` is experimental and subject to change
  --> $DIR/feature-gate-cfg_target_object_format.rs:2:7
   |
LL | #[cfg(target_object_format = "elf")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #152586 <https://github.com/rust-lang/rust/issues/152586> for more information
   = help: add `#![feature(cfg_target_object_format)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
