tests/ui/feature-gates/feature-gate-cfg_target_object_format.rs
#[allow(unused)]
#[cfg(target_object_format = "elf")]
//~^ ERROR `cfg(target_object_format)` is experimental
const X: () = ();

fn main() {}
